# geometry_utils

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindEigen.cmake
include/: internal_utils.hpp  manifold.hpp  matrix_types.hpp  numerical_derivative.hpp  se3.hpp  so3.hpp
include/geometry_utils/: angle_utils.hpp  internal_utils.hpp  manifold.hpp  matrix_types.hpp  numerical_derivative.hpp  rotation_utils.hpp  so3.hpp
test/: CMakeLists.txt  angle_utils_test.cc  numerical_derivative_test.cc  rotation_utils_test.cc  se3_test.cc  so3_test.cc  test_utils.cc  test_utils.hpp
